CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(LIBRARY_NAME database)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

PROJECT(${LIBRARY_NAME})

ADD_LIBRARY(${LIBRARY_NAME} STATIC
    database.h database_types.h
    database_manager.h database_manager.cpp
    postgres_manager.h postgres_manager.cpp)
    
FIND_PACKAGE(PostgreSQL REQUIRED)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC PostgreSQL::PostgreSQL)

INCLUDE_DIRECTORIES(../utilities)

ADD_DEPENDENCIES(${LIBRARY_NAME} utilities)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC utilities)

IF(DEFINED __USE_TYPE_CONTAINER__)
    INCLUDE_DIRECTORIES(../container)

    ADD_DEPENDENCIES(${LIBRARY_NAME} container)
    TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC container)
ENDIF()

INCLUDE_DIRECTORIES(../threads)

ADD_DEPENDENCIES(${LIBRARY_NAME} threads)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC threads)