CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(PROGRAM_NAME compression_sample)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")

#set the project name
PROJECT(${PROGRAM_NAME} VERSION 1.0)

ADD_EXECUTABLE(${PROGRAM_NAME} compression_sample.cpp)

INCLUDE_DIRECTORIES(../../cpp_libraries/utilities)

ADD_DEPENDENCIES(${PROGRAM_NAME} utilities)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME} PUBLIC utilities)