CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(PROGRAM_NAME container_sample)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

PROJECT(${PROGRAM_NAME})

ADD_EXECUTABLE(${PROGRAM_NAME} container_sample.cpp)

INCLUDE_DIRECTORIES(../../cpp_libraries/utilities)

ADD_DEPENDENCIES(${PROGRAM_NAME} utilities)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME} PUBLIC utilities)

IF(DEFINED __USE_TYPE_CONTAINER__)
	INCLUDE_DIRECTORIES(../../cpp_libraries/container)

	ADD_DEPENDENCIES(${PROGRAM_NAME} container)
	TARGET_LINK_LIBRARIES(${PROGRAM_NAME} PUBLIC container)
ENDIF()