CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(PROGRAM_NAME decompression_sample)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

#set the project name
PROJECT(${PROGRAM_NAME} VERSION 1.0)

ADD_EXECUTABLE(${PROGRAM_NAME} decompression_sample.cpp)

INCLUDE_DIRECTORIES(../../cpp_libraries/utilities)

ADD_DEPENDENCIES(${PROGRAM_NAME} utilities)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME} PUBLIC utilities)